# Parallel-GA-TSP

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
examples/: main.cpp
include/: GASolver.h  ParallelEvaluator.h  Types.h  Utils.h
include/Core/: GASolver.h  ParallelEvaluator.h  Types.h  Utils.h
include/Parser/: TSPLIBParser.h
src/: GASolver.cpp  ParallelEvaluator.cpp  Utils.cpp
src/Core/: GASolver.cpp  ParallelEvaluator.cpp  Utils.cpp
src/Parser/: TSPLIBParser.cpp
tests/: TestUtils.h  test_ga.cpp  test_parallel.cpp  test_parser.cpp  test_tsplib_benchmark.cpp  test_utils.cpp
